# Vora

./: .clangd  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  USER_GUIDE.md  build.ps1  build.sh  callgrind.out.34530  callgrind.out.34987  callgrind.out.35617  callgrind.out.36388
.claude/: bugfix-progress.json
.github/workflows/: ci.yml
cmake/toolchains/: linux-aarch64.cmake  linux-armhf.cmake  linux-i386.cmake  macos-universal.cmake  windows-arm64.cmake  windows-i386.cmake
docs/: 00-roadmap.md  01-技术栈概览.md  02-项目结构.md  03-词法分析器开发文档.md  04-AST开发文档.md  05-语法分析器开发文档.md  06-解释器开发文档.md  07-运行时系统开发文档.md  08-已实现功能总结.md  09-后续优化建议.md  09-构建系统指南.md  10-后续优化建议.md  10-程序员视角-Vora语言深度分析与UX路线图.md  11-roadmap.md  11-程序员视角-Vora语言深度分析与UX路线图.md  12-对Vora项目的评价.md  13-标准与反思.md  14-技术债.md  15-写给用户.md  mainpage.md
docs/roadmap/: parser.md
examples/: 01-literals.va  02-arithmetic.va  03-comparison.va  04-variables.va  05-if-else.va  06-while.va  07-for-in.va  08-functions.va  09-objects.va  10-arrays.va  11-strings.va  12-inc-dec.va  13-comments.va  14-builtins.va  15-nested-loop.va  16-compound-assign.va  17-type-annotations.va  18-ternary.va  19-try-catch.va  20-throw-custom-error.va  21-inheritance.va  22-unicode.va  23-logical.va  24-number-literals.va  25-dict.va  26-default-params.va  27-multi-inheritance.va  28-super.va  29-error-propagation.va  30-closures.va  31-recursion.va  32-lambdas.va  33-c-for.va  34-break-continue.va  35-higher-order.va  36-const.va  37-module-import.va  38_module_export.va  39_module_import_relative.va  40-rest-params.va  (+18 more)
examples/embed/: CMakeLists.txt  main.cpp
res/: LICENSE.rtf  generate_icons.py  path_env.wxs.in  vora.cmd  vora.rc  vora.rc.in  vora.wxs  vora.wxs.in
scripts/: amalgamate_headers.py  build-api-docs.py  build-website-docs.py  extract-builtins.py
src/: main.cpp  vora.h
src/ast/: ast_printer.cpp  ast_printer.h  binding_pattern.cpp  binding_pattern.h  expr.cpp  expr.h  expr_visitor.h  param_decl.cpp  param_decl.h  program.h  stmt.cpp  stmt.h  stmt_visitor.h
src/common/: error_reporter.cpp  error_reporter.h
src/formatter/: formatter.cpp  formatter.h
src/gc/: gc_heap.cpp  gc_heap.h  gc_object.h  gc_ptr.h
src/interpreter/: interpreter.cpp  interpreter.h
src/json_rpc/: json_rpc.cpp  json_rpc.h  message_router.cpp  message_router.h  transport.cpp  transport.h
src/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
src/lsp/: semantic_analyzer.cpp  semantic_analyzer.h
src/parser/: parser.cpp  parser.h
src/runtime/: bound_method.cpp  bound_method.h  builtins.cpp  builtins.h  callable.h  class_constructor.cpp  class_constructor.h  environment.cpp  environment.h  native_function.cpp  native_function.h  object_constructor.cpp  object_constructor.h  runtime_config.h  runtime_error.cpp  runtime_error.h  value.cpp  value.h  vora_function.cpp  vora_function.h
src/vm/: chunk.cpp  chunk.h  compiler.cpp  compiler.h  compiler_expr.cpp  compiler_stmt.cpp  opcode.h  value_ops.cpp  value_ops.h  vm.cpp  vm.h
std/: array.va  async.va  datetime.va  fs.va  json.va  math.va  os.va  regex.va  string.va
tests/: leetcode-top-100.md  run_examples.ps1  run_tests.ps1  run_tests.sh  scrape_leetcode.py  test.md
tests/ans/: 01-two-sum.va  02-move-zeroes.va  03-container-most-water.va  04-three-sum.va  05-maximum-subarray.va  06-merge-intervals.va  07-rotate-array.va  08-product-except-self.va  09-first-missing-positive.va  10-set-matrix-zeroes.va  11-spiral-matrix.va  12-rotate-image.va  13-search-2d-matrix-ii.va  14-single-number.va  15-majority-element.va  16-sort-colors.va  17-next-permutation.va  18-find-duplicate-number.va  19-best-time-buy-sell-stock.va  20-jump-game.va  21-jump-game-ii.va  22-partition-labels.va  23-climbing-stairs.va  24-pascals-triangle.va  25-house-robber.va  26-perfect-squares.va  27-coin-change.va  28-word-break.va  29-longest-increasing-subsequence.va  30-maximum-product-subarray.va  31-partition-equal-subset-sum.va  32-longest-valid-parentheses.va  33-unique-paths.va  34-minimum-path-sum.va  35-longest-palindromic-substring.va  36-longest-common-subsequence.va  37-edit-distance.va  38-valid-parentheses.va  39-min-stack.va  40-decode-string.va  (+26 more)
tests/bench/: 01-loop-pressure.va  02-fibonacci.va  03-array-memory.va  04-prime-sieve.va
tests/formatter/: test_fmt_roundtrip.va
tests/fuzz/: fuzz_vm.cpp
tests/interpreter/: test_break_continue.va  test_builtins.va  test_cfor.va  test_closure_mutation_recursion.va  test_const.va  test_defer.va  test_destructure_assign.va  test_dict_comp.va  test_do_while.va  test_edge_cases.va  test_errors.va  test_generator.va  test_input.va  test_interpolation.va  test_iterator.va  test_json.va  test_lambda.va  test_list_comp.va  test_logical.va  test_match.va  test_math.va  test_module_caching.va  test_module_export.va  test_module_helper.va  test_module_import.va  test_number_literals.va  test_scopes.va  test_set_map.va  test_spread.va  test_tostring.va  test_type_all.va  test_unicode_id.va  test_utf8_len.va
tests/lexer/: test_error_recovery.va  test_strings.va  test_tokens.va  test_tokens_ext.va
tests/parser/: test_expressions.va  test_expressions_ext.va  test_statements.va  test_statements_ext.va
tests/runtime/: test_arrays.va  test_async.va  test_catch_scopes.va  test_closures.va  test_compound_assign.va  test_deep_recursion.va  test_default_params.va  test_defer.va  test_destructure.va  test_destructure_defaults.va  test_dict.va  test_for_in_object.va  test_for_in_pattern_destructure.va  test_functions.va  test_large_const_pool.va  test_local_recursion.va  test_match.va  test_multi_inherit.va  test_named_params.va  test_null_coalescing.va  test_objects.va  test_optional_chaining.va  test_recursion.va  test_rest_params.va  test_set_map.va  test_std_array.va  test_std_datetime.va  test_std_fs.va  test_std_os.va  test_std_regex.va  test_std_string.va  test_super.va  test_tco.va
tests/unit/: test_chunk.cpp  test_compiler.cpp  test_formatter.cpp  test_json_rpc.cpp  test_lexer.cpp  test_main.cpp  test_parser.cpp  test_value.cpp  (+2 more)
(+8 files in other folders)
